assets/stylesheets/index.css
@import "https://fonts.googleapis.com/css?family=Source+Code+Pro";
body {
  background: #eaeae2;
  color: #fff; }

a {
  text-decoration: none; }

.btn {
  line-height: 9px;
  vertical-align: 50%; }

.window {
  font-family: HelveticaNeue, 'Helvetica Neue', 'Lucida Grande', Arial, sans-serif;
  background: #3b3b3b;
  width: 90%;
  height: auto;
  margin: auto;
  border: 1px solid #acacac;
  border-radius: 6px;
  margin-top: 5%;
  margin-bottom: 5%; }

.titlebar {
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ebebeb, color-stop(1, #d5d5d5)));
  background: -webkit-linear-gradient(top, #ebebeb, #d5d5d5);
  background: -moz-linear-gradient(top, #ebebeb, #d5d5d5);
  background: -ms-linear-gradient(top, #ebebeb, #d5d5d5);
  background: -o-linear-gradient(top, #ebebeb, #d5d5d5);
  background: linear-gradient(top, #ebebeb, #d5d5d5);
  color: #4d494d;
  font-size: 11pt;
  line-height: 20px;
  text-align: center;
  width: 100%;
  height: 20px;
  border-top: 1px solid #f3f1f3;
  border-bottom: 1px solid #b1aeb1;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  cursor: default; }

.buttons {
  padding-left: 8px;
  padding-top: 3px;
  float: left;
  line-height: 0px; }

.buttons:hover a {
  visibility: visible; }

.close {
  background: #ff5c5c;
  font-size: 9pt;
  width: 11px;
  height: 11px;
  border: 1px solid #e33e41;
  border-radius: 50%;
  display: inline-block; }

.close:active {
  background: #c14645;
  border: 1px solid #b03537; }

.close:active .closebutton {
  color: #4e0002; }

.closebutton {
  color: #820005;
  visibility: hidden;
  cursor: default; }

.minimize {
  background: #ffbd4c;
  font-size: 9pt;
  line-height: 11px;
  margin-left: 4px;
  width: 11px;
  height: 11px;
  border: 1px solid #e09e3e;
  border-radius: 50%;
  display: inline-block; }

.minimize:active {
  background: #c08e38;
  border: 1px solid #af7c33; }

.minimize:active .minimizebutton {
  color: #5a2607; }

.minimizebutton {
  color: #9a5518;
  visibility: hidden;
  cursor: default; }

.zoom {
  background: #00ca56;
  font-size: 9pt;
  line-height: 11px;
  margin-left: 6px;
  width: 11px;
  height: 11px;
  border: 1px solid #14ae46;
  border-radius: 50%;
  display: inline-block; }

.zoom:active {
  background: #029740;
  border: 1px solid #128435; }

.zoom:active .zoombutton {
  color: #003107; }

.zoombutton {
  color: #006519;
  visibility: hidden;
  cursor: default; }

.logo {
  margin-top: 15px;
  display: inline-flex; }

pre {
  color: #ff5c5c; }

.content {
  font-family: 'Source Code Pro', monospace;
  padding: 10px; }
  .content .title {
    background: #fff;
    display: inline-block;
    margin-top: 20px; }
    .content .title h3 {
      margin-bottom: 0px;
      color: #000;
      font-weight: 100; }
  .content a {
    color: #fff; }

.team ul {
  padding-left: 1em; }

h3 {
  margin-top: 0px; }

/*# sourceMappingURL=index.css.map */

